solve overflow-x problem

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -10,6 +10,8 @@ footer {
         justify-content: space-between;
         position: relative;
         margin-block: 5rem;
+        gap: unset;
+        display: flex;
 
         span {
             transition: color .1s ease .8s;
