--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,11 @@ html {
     font-family: "Archivo";
     font-weight: 300;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    max-width: 100vw;
     cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="%230038FF" d="M4.5.79v22.42l6.56-6.57h9.29L4.5.79z"></path></svg>'), auto;
+    overscroll-behavior-x: none;
+    overflow-x: hidden;
+    touch-action: pan-y;
 }
 
 body {
